@@ -31,7 +31,7 @@ no_index:
 requires:
   Class::Utils: 0.05
   Error::Pure: 0.15
-  PYX::Parser: 0.05
+  PYX::Parser: 0.08
   PYX::Utils: 0.01
   Tags::Output::Raw: 0.11
   perl: 5.6.2
