@@ -1,4 +1,5 @@
 0.08
+ - Change api of parse(): Don't decode utf-8 string via 'input_encoding'.
 
 0.07 2021-02-20T21:25:19+01:00
  - Add 'output_encoding' parameter.
